# Python

./: README.md  pyproject.toml
Advance_Python/2023_06_07/: 2023_06_07.py
Advance_Python/2023_06_12/: 2023_06_12.py
Advance_Python/2023_06_13/: 2023-06-13.py  2023_06_13_classes.py  2023_06_13_classes_dic.py  Aluno1.py  Aluno2.py
Advance_Python/2023_06_14/: Class_Aluno.py  Class_Student_Info.py  Main_Student_Info.py  Main_aluno.py
Advance_Python/2023_06_19/: Ex1_TempConverter_Tiago.py  Ex2_Prod_Price_Tiago.py  Ex2_Produto_Formador.py  Ex3_Coworker_SubClass.py  Ex3_Friend_SubClass.py  Ex3_Main.py  Ex3_Person_Class.py  ex1_Eloi.py  ex2_Manuel.py
Advance_Python/2023_06_20/: Ex1_Conta_Bancaria.py  Ex2_Contas_bancarias_(class_and_subclass).py  Ex3_Person_Friend_Coworker.py  Ex_2_Conta_2_Formador.py
Advance_Python/2023_06_21/: Ex1_Person_Friend_Coworker.py  Ex3_Property.py  Ex_2_Product.py
Advance_Python/2023_06_26/: Respostas.docx  Tiago_Reis_EX1.py  Tiago_Reis_EX2.py
Advance_Python/2023_06_27/: Ex1_Tiago.py  Ex2_Tiago.py  Ex3_Tiago.py
Advance_Python/2023_06_28/: Ex1_Type_Method.py  Ex2_Metaclass.py  Ex3_MetaClass_Heritage.py
Advance_Python/2023_07_03/: Ex1_Iter.py  Ex2_Iter.py  Ex3_Iter_with_sentinel.py  Ex4_Inf_Iter.py  Ex5_Iter_Yield.py
Alien_Invasion_TRV/: README.md  pyproject.toml
Alien_Invasion_TRV/Game/: Game_description.txt  alien.py  alien_invation.py  bg_button.py  game_stats.py  scoreboard.py  settings.py  ship.py
Django_Projects/First_Django_Website/: db.sqlite3
Django_Projects/Psychologist_Service_Website/: db.sqlite3
(+42 files in other folders)
