[tool.poetry]
name = "requests"
version = "0.1.0"
description = ""
authors = ["Tiago Reis <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
openpyxl = "3.1.2"
pandas = "2.1.3"
XlsxWriter = "3.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

